WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33813
Crash when using DOMApplicationCache from a destroyed frame
https://bugs.webkit.org/show_bug.cgi?id=33813
Summary
Crash when using DOMApplicationCache from a destroyed frame
Alexey Proskuryakov
Reported
2010-01-18 14:26:27 PST
DOMApplicationCache::scriptExecutionContext() isn't prepared have its frame destroyed. <
rdar://problem/7545104
>
Attachments
proposed fix
(4.22 KB, patch)
2010-01-18 14:39 PST
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-18 14:39:27 PST
Created
attachment 46852
[details]
proposed fix
Geoffrey Garen
Comment 2
2010-01-18 14:45:35 PST
Comment on
attachment 46852
[details]
proposed fix r=me I think you need a follow-up patch to fix callers of scriptExecutionContext() so they all check for null, though.
Alexey Proskuryakov
Comment 3
2010-01-18 14:52:16 PST
Committed <
http://trac.webkit.org/changeset/53433
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug