        Reviewed by Geoffrey Garen.

https://bugs.webkit.org/show_bug.cgi?id=33813
        <rdar://problem/7545104> Crash when using DOMApplicationCache from a destroyed frame

        Test: http/tests/appcache/destroyed-frame.html

        * loader/appcache/DOMApplicationCache.cpp:
        (WebCore::DOMApplicationCache::scriptExecutionContext): Return null when there is no frame.



Canonical link: https://commits.webkit.org/44834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53433 268f45cc-cd09-0410-ab3c-d52691b4dbfc